<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- App name -->
    <string name="app_name">Apollo Mod</string>
    <string name="app_version_number">1.0</string>

    <!-- Content descriptions for the Bottom Action Bar -->
    <string name="cd_favorite">Make this a favorite song</string>
    <string name="cd_search">Search through your music</string>
    <string name="cd_overflow">View more options</string>
    <string name="cd_bottom_action_bar_album_art">Album art for this song</string>
    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="cd_shuffle">Shuffle tracks</string>
    <string name="cd_show_queue">Show now playing queue</string>

    <!-- AudioPlayer title -->
    <string name="nowplaying">Now Playing</string>

    <!-- Used to indicate the number of albums for an artist -->
    <plurals name="Nalbums">

        <!-- Number of albums is one -->
        <item quantity="one">1 album</item>
        <!-- Number of albums is more than one -->
        <item quantity="other"><xliff:g id="count">%d</xliff:g> albums</item>
    </plurals>

    <!-- Used to indicate the number of songs for an album -->

    <plurals name="Nsongs">

        <!-- Number of songs is one -->
        <item quantity="one">1 song</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> songs</item>
    </plurals>

    <!-- Toasts after adding song(s) to playlists -->
    <plurals name="NNNtrackstoplaylist">
        <!-- message shown when one song was added -->
        <item quantity="one">1 song added to playlist</item>
        <!-- message shown when zero or more than one song was added -->
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to playlist</item>
    </plurals>
    <!-- Toasts after removing song from playlist -->
    <string name="track_removed_from_playlist">\"%s\" removed from playlist</string>
    

    <!-- Headers -->
    <string name="album_header">ALBUM LIST</string>
    <string name="track_header">TRACK LIST</string>

    <!-- Options MenuItems -->
    <string name="settings">Settings</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="share">Share</string>
    <string name="play_store">Play Store</string>

    <!-- Set track as ringtone -->
    <string name="set_as_ringtone">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" set as ringtone</string>

    <!-- Do not translate. Duration format for duration < 1 hour -->
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <!-- Do not translate. Duration format for duration >= 1 hour -->
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>

    <!-- Transient popup message shown after renaming a playlist -->
    <string name="rename_playlist">Rename playlist</string>

    <!-- Shuffle and repeat messages -->
    <string name="repeat_one">Repeat one</string>
    <string name="repeat_all">Repeat all</string>
    <string name="repeat_off">Repeat off</string>
    <string name="shuffle_off">Shuffle off</string>
    <string name="shuffle_on">Shuffle on</string>

    <!-- Share Intent -->
    <string name="now_listening_to">Now listening to:</string>
    <string name="by">by</string>
    <string name="share_track_using">Share track using</string>

    <!-- ContextMenu items -->
    <string name="play_all">Play all</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="use_as_ringtone">Use as ringtone</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="search">Search</string>
    <string name="remove">Remove from playlist</string>
    <string name="image_edit_gallery">New image from gallery</string>
    <string name="image_edit_file">Original image from file</string>
    <string name="image_edit_lastfm">Fetch image from last.fm</string>
    <string name="image_edit_web">Search the web for an image</string>
    
    <!--  ContextMenu Headers -->
    <string name="image_edit_albums">Edit Album Artwork</string>
    <string name="image_edit_artists">Edit Artist Image</string>
    <string name="image_edit_genre">Edit Genre Image</string>
    <string name="image_edit_playlist">Edit Playlist Image</string>

    <!-- App Widgets -->
    <string name="apollo_1x1">Apollo (1x1)</string>
    <string name="apollo_4x1">Apollo (4x1)</string>
    <string name="apollo_4x2">Apollo (4x2)</string>

    <!-- Unknown genre name -->
    <string name="unknown">Unknown</string>

    <!-- Settings -->
    <string name="about">About ApolloMod</string>
    <string name="eqalizer">Equalizer</string>
    <string name="header_interface">Interface</string>
    <string name="settings_storage_category">Storage</string>
    <string name="themes">Theme Chooser</string>
    <string name="themes_title">Theme Chooser</string>
    <string name="themes_subtitle">Select theme for ApolloMod</string>
    <string name="version">ApolloMod Version</string>
    <string name="tab_visibility_title">Tab visibility</string>
    <string name="tab_visibility_summary">Choose which tabs are displayed</string>
    <string name="settings_delete_cache_title">Delete cache</string>
    <string name="settings_delete_cache_summary">Remove all cached images</string>
    <string name="delete_warning">This will permanently delete the cached image entries</string>
    <string name="recents_title">Recents View Type</string>
    <string name="recents_summary">Choose to the type of recents display to show</string>
	<string name="visualizer_title">Audio visualizer</string>
    <string name="visualizer_summary">Choose to display audio visualizations during playback</string>
	<string name="widget_style_title">Widget Style</string>
    <string name="widget_style_summary">Choose the widget design</string>
    <string name="widget_style_dark">Holo Dark</string>
    <string name="widget_style_light">Holo Light</string>
    <string name="about_apollomod_title">About ApolloMod</string>
    <string name="about_apollomod_message"><![CDATA[ApolloMod is an open source music player based on CyanogenMod\'s Apollo Music Player and released under the same Apache License.\n\n
License Link:\n
        http://www.apache.org/licenses/LICENSE-2.0.html \n\n
ApolloMod Source Code:\n
https://github.com/Splitter/android_packages_apps_apolloMod  \n\n
Original Apollo Source Code: \n
https://github.com/CyanogenMod/android_packages_apps_Apollo/tree/cm-10.1
        
    ]]></string>
    <string name="dependencies">Dependency Licenses</string>
    <string name="dependencies_title">Dependency Licenses:</string>
    
    <!-- Settings keys -->
    <string name="key_themes" translatable="false">themepreview</string>
    <string name="key_current_theme" translatable="false">current_theme</string>
    <string name="key_themes_preferences" translatable="false">themePrefences</string>
    <string name="key_build_version" translatable="false">build_version</string>
    <string name="key_build_depends" translatable="false">build_depends</string>
    <string name="key_tabs_enabled" translatable="false">tabs_enabled</string>
    <string name="key_recents_type" translatable="false">recents_type</string>
    <string name="key_visualization_type" translatable="false">visualization_type</string>
    <string name="key_widget_style" translatable="false">widget_type</string>
    <string name="key_delete_cache" translatable="false">delete_cache</string>

    <!-- Theme layout Buttons -->
    <string name="apply_theme">Apply theme</string>
    <string name="get_more_themes">Get more themes</string>

    <!-- Playlists menu -->
    <string name="favorite">Favorites</string>
    <string name="queue">Queue</string>
    <string name="new_playlist">New</string>
    <string name="new_playlist_name_template">Playlist <xliff:g id="number">%d</xliff:g></string>
    <string name="save">Save</string>
    <string name="overwrite">Overwrite</string>

    <!-- Tabs -->
    <string name="tab_recent">Recent</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_songs">Songs</string>
    <string name="tab_playlists">Playlists</string>
    <string name="tab_genres">Genres</string>
    
    <!-- Recents -->
    <string name="recents_added">Recently Added</string>
    <string name="recents_played">Recently Played</string>
    <string name="recents_split">Splitscreen</string>
    
    <!-- Visualizations -->
    <string name="visual_none">None</string>
    <string name="visual_bargraph">Bar Graph</string>
    <string name="visual_solidbargraph">Solid Bar Graph</string>
    <string name="visual_waveform">Waveform</string>
    
    <!-- Themes -->
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="theme_black">Black Theme</string>
    
    <!-- External file dialog -->
    <string name="play_external_question_msg">Select the action to apply to: \n\n<b><xliff:g id="name">%s</xliff:g></b></string>
    <string name="play_external_question_button_play">Play</string>
    <string name="play_external_question_button_queue">Enqueue</string>
    <string name="play_external_question_button_cancel">Cancel</string>
    <string name="play_external_error">Failed to play file</string>

    <!-- Something went wrong -->
    <string name="error">Error</string>
    
    <!-- Titles for Albums/Artist screens -->
    <string name="artist_page_title">" Artist: "</string>
    <string name="album_page_title">" Album: "</string>
    
    <!--  Simple EQ -->
    <string name="simple_eq_page_title">Equalizer</string>
    <string name="simple_eq_bass">Bass Boost</string>
    <string name="simple_eq_equalizer">Equalizer</string>
    <string name="simple_eq_band0">15Hz</string>
    <string name="simple_eq_band1">62Hz</string>
    <string name="simple_eq_band2">250Hz</string>
    <string name="simple_eq_band3">1kHz</string>
    <string name="simple_eq_band4">5kHz</string>
    <string name="simple_eq_band5">16kHz</string>
    
    <string name="recents_added">Recently Added</string>
    <string name="recents_played">Recently Played</string>

</resources>
