<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <CheckBox 
        android:id="@+id/simple_eq_bass"
        android:text="@string/simple_eq_bass"
        android:textSize="@dimen/text_size_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/simple_eq_margin_top_bottom"
        android:layout_marginBottom="@dimen/simple_eq_margin_top_bottom"
        android:layout_marginLeft="@dimen/simple_eq_margin_left_right"
        android:layout_marginRight="@dimen/simple_eq_margin_left_right"
        android:checked="false"/>
	<SeekBar
	    android:id="@+id/simple_eq_bassboost"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/simple_eq_margin_top_bottom"
        android:layout_marginBottom="@dimen/simple_eq_margin_top_bottom"
        android:layout_marginLeft="@dimen/simple_eq_margin_left_right"
        android:layout_marginRight="@dimen/simple_eq_margin_left_right"
	    android:max="100"
	    android:progress="0"/>
	
	
    <CheckBox 
        android:id="@+id/simple_eq_equalizer"
        android:text="@string/simple_eq_equalizer"
        android:textSize="@dimen/text_size_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/simple_eq_section_margin"
        android:layout_marginBottom="@dimen/simple_eq_margin_top_bottom"
        android:layout_marginLeft="@dimen/simple_eq_margin_left_right"
        android:layout_marginRight="@dimen/simple_eq_margin_left_right"
        android:checked="false"/>
	
	<LinearLayout 
	    android:orientation="horizontal" 
	    android:layout_marginLeft="@dimen/simple_eq_margin_left_right" 
        android:layout_marginRight="@dimen/simple_eq_margin_left_right"
	    android:layout_width="fill_parent" 
	    android:layout_height="fill_parent" 
        android:layout_marginBottom="@dimen/simple_eq_section_margin"
	    android:baselineAligned="false">
    
	    <LinearLayout 
	        android:orientation="vertical"
	        android:id="@+id/simple_eq_band0_layout"
	        android:layout_width="0.0dip"
	        android:layout_height="fill_parent" 
	        android:layout_weight="1.0">
            <TextView 
                android:id="@+id/simple_eq_band0" 
                android:text="@string/simple_eq_band0"
        		android:textSize="@dimen/text_size_small"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center_horizontal"/>
            <com.andrew.apolloMod.views.VerticalSeekBar 
                android:id="@+id/simple_eq_band0_seek"
        		android:gravity="center_horizontal"
        		android:layout_height="fill_parent"
        		android:layout_width="@dimen/simple_eq_seek_vert_width"
        		android:paddingRight="@dimen/simple_eq_seek_vert_padding_right"
        		android:paddingLeft="@dimen/simple_eq_seek_vert_padding_left"
	    		android:max="100"
	    		android:progress="100"/>
        </LinearLayout>
    
	    <LinearLayout 
	        android:orientation="vertical"
	        android:id="@+id/simple_eq_band1_layout"
	        android:layout_width="0.0dip"
	        android:layout_height="fill_parent" 
	        android:layout_weight="1.0">
            <TextView 
                android:id="@+id/simple_eq_band1" 
                android:text="@string/simple_eq_band1"
        		android:textSize="@dimen/text_size_small"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center_horizontal"/>
            <com.andrew.apolloMod.views.VerticalSeekBar 
                android:id="@+id/simple_eq_band1_seek"
        		android:gravity="center_horizontal"
        		android:layout_height="fill_parent"
        		android:layout_width="@dimen/simple_eq_seek_vert_width"
        		android:paddingRight="@dimen/simple_eq_seek_vert_padding_right"
        		android:paddingLeft="@dimen/simple_eq_seek_vert_padding_left"
	    		android:max="100"
	    		android:progress="100"/>
        </LinearLayout>
    
	    <LinearLayout 
	        android:orientation="vertical"
	        android:id="@+id/simple_eq_band2_layout"
	        android:layout_width="0.0dip"
	        android:layout_height="fill_parent" 
	        android:layout_weight="1.0">
            <TextView 
                android:id="@+id/simple_eq_band2" 
                android:text="@string/simple_eq_band2"
        		android:textSize="@dimen/text_size_small"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center_horizontal"/>
            <com.andrew.apolloMod.views.VerticalSeekBar 
                android:id="@+id/simple_eq_band2_seek"
        		android:gravity="center_horizontal"
        		android:layout_height="fill_parent"
        		android:layout_width="@dimen/simple_eq_seek_vert_width"
        		android:paddingRight="@dimen/simple_eq_seek_vert_padding_right"
        		android:paddingLeft="@dimen/simple_eq_seek_vert_padding_left"
	    		android:max="100"
	    		android:progress="100"/>
        </LinearLayout>
	    
	    <LinearLayout 
	        android:orientation="vertical"
	        android:id="@+id/simple_eq_band3_layout"
	        android:layout_width="0.0dip"
	        android:layout_height="fill_parent" 
	        android:layout_weight="1.0">
            <TextView 
                android:id="@+id/simple_eq_band3" 
                android:text="@string/simple_eq_band3"
        		android:textSize="@dimen/text_size_small"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center_horizontal"/>
            <com.andrew.apolloMod.views.VerticalSeekBar 
                android:id="@+id/simple_eq_band3_seek"
        		android:gravity="center_horizontal"
        		android:layout_height="fill_parent"
        		android:layout_width="@dimen/simple_eq_seek_vert_width"
        		android:paddingRight="@dimen/simple_eq_seek_vert_padding_right"
        		android:paddingLeft="@dimen/simple_eq_seek_vert_padding_left"
	    		android:max="100"
	    		android:progress="100"/>
        </LinearLayout>
    
	    <LinearLayout 
	        android:orientation="vertical"
	        android:id="@+id/simple_eq_band4_layout"
	        android:layout_width="0.0dip"
	        android:layout_height="fill_parent" 
	        android:layout_weight="1.0">
            <TextView 
                android:id="@+id/simple_eq_band4" 
                android:text="@string/simple_eq_band4"
        		android:textSize="@dimen/text_size_small"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center_horizontal"/>
            <com.andrew.apolloMod.views.VerticalSeekBar 
                android:id="@+id/simple_eq_band4_seek"
        		android:gravity="center_horizontal"
        		android:layout_height="fill_parent"
        		android:layout_width="@dimen/simple_eq_seek_vert_width"
        		android:paddingRight="@dimen/simple_eq_seek_vert_padding_right"
        		android:paddingLeft="@dimen/simple_eq_seek_vert_padding_left"
	    		android:max="100"
	    		android:progress="100"/>
        </LinearLayout>
    
	    <LinearLayout 
	        android:orientation="vertical"
	        android:id="@+id/simple_eq_band5_layout"
	        android:layout_width="0.0dip"
	        android:layout_height="fill_parent" 
	        android:layout_weight="1.0">
            <TextView 
                android:id="@+id/simple_eq_band5" 
                android:text="@string/simple_eq_band5"
        		android:textSize="@dimen/text_size_small"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center_horizontal"/>
            <com.andrew.apolloMod.views.VerticalSeekBar 
                android:id="@+id/simple_eq_band5_seek"
        		android:gravity="center_horizontal"
        		android:layout_height="fill_parent"
        		android:layout_width="@dimen/simple_eq_seek_vert_width"
        		android:paddingRight="@dimen/simple_eq_seek_vert_padding_right"
        		android:paddingLeft="@dimen/simple_eq_seek_vert_padding_left"
	    		android:max="100"
	    		android:progress="100"/>
        </LinearLayout>
	    
	    
	    
	    
	</LinearLayout>
	
</LinearLayout>
