<?xml version="1.0" encoding="utf-8"?>

<!-- ImageView four_by_one_albumart has contentDescription assigned programatically. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appwidget_bg_holo"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/four_by_one_albumart"
        android:layout_width="@dimen/four_by_one_album_art_width"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/four_by_one_album_appwidget"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/holo_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="4dp" >

        <TextView
            android:id="@+id/four_by_one_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/four_by_one_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/four_by_one_control_prev"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/holo_selector"
        android:scaleType="center"
        android:src="@drawable/apollo_holo_dark_prev"
        android:visibility="gone"
        android:contentDescription="@string/cd_previous" />

    <ImageView
        android:layout_width="0.2dp"
        android:layout_height="match_parent"
        android:background="@color/transparent_black"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/four_by_one_control_play"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/holo_selector"
        android:scaleType="center"
        android:src="@drawable/apollo_holo_dark_play"
        android:contentDescription="@string/cd_play" />

    <ImageView
        android:layout_width="0.2dp"
        android:layout_height="match_parent"
        android:background="@color/transparent_black"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/four_by_one_control_next"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/holo_selector"
        android:scaleType="center"
        android:src="@drawable/apollo_holo_dark_next"
        android:contentDescription="@string/cd_next" />

</LinearLayout>
